--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
             <div class="m-5">
                 <a href="https://sarath-cmd.github.io/Clock-Stopwatch/">
-                    <img src="./asset/Clock.png" class="h-[30vh] rounded-xl">
+                    <img src="./asset/clock.png" class="h-[30vh] rounded-xl">
                 </a>
                 <h3 class="flex justify-center font-medium text-xl">Clock</h3>
                 <p class="p-2">
