--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </div>
 
             <div class="m-5">
-                <a href="https://sarath-cmd.github.io/Clock-Stopwatch/">
+                <a href="https://sarath-cmd.github.io/Clock/">
                     <img src="./asset/clock.png" class="h-[30vh] rounded-xl">
                 </a>
                 <h3 class="flex justify-center font-medium text-xl">Clock</h3>
@@ -213,7 +213,7 @@
             </div>
             
             <div class="m-5">
-                <a href="">
+                <a href="https://sarath-cmd.github.io/Login-Page/">
                     <img src="./asset/Htmllogin.png" class="h-[30vh] rounded-xl">
                 </a>
                 <h3 class="flex justify-center font-medium text-xl">Login & Reg</h3>
